# RealTime

./: README.md  main.py  pyproject.toml
detail_agent/: __init__.py  agent.py
google_search_agent/: agent.py
static/: index.html
static/js/: app.js  audio-player.js
