[project]
name = "realtime"
version = "0.1.0"
description = "Real Time conversation application"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "google-adk>=1.27.1",
    "google-generativeai>=0.8.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "uvicorn>=0.42.0",
]
